; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_readBitsFromReversedStream.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_readBitsFromReversedStream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i8*, i64)* @readBitsFromReversedStream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @readBitsFromReversedStream(i64* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i32 0, i32* %7, align 4
  %9 = load i64, i64* %6, align 8
  %10 = sub i64 %9, 1
  store i64 %10, i64* %8, align 8
  br label %11

11:                                               ; preds = %25, %3
  %12 = load i64, i64* %8, align 8
  %13 = load i64, i64* %6, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %28

15:                                               ; preds = %11
  %16 = load i64*, i64** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i64 @readBitFromReversedStream(i64* %16, i8* %17)
  %19 = trunc i64 %18 to i32
  %20 = load i64, i64* %8, align 8
  %21 = trunc i64 %20 to i32
  %22 = shl i32 %19, %21
  %23 = load i32, i32* %7, align 4
  %24 = add i32 %23, %22
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %15
  %26 = load i64, i64* %8, align 8
  %27 = add i64 %26, -1
  store i64 %27, i64* %8, align 8
  br label %11

28:                                               ; preds = %11
  %29 = load i32, i32* %7, align 4
  ret i32 %29
}

declare dso_local i64 @readBitFromReversedStream(i64*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
